Package: aroma.core
===================

Version: 2.3.6 [2011-12-15]
o Added argument 'units' to writeDateFrame() for AromaUnitSignalBinarySet
  to make it possible to write any subset of units and in any order,
  e.g. genome order.


Version: 2.3.5 [2011-12-11]
o Now it is possible to fully specify the location and the width
  of each bin used by colBinnedSmoothing(), which now also returns
  the bin counts as part of the attributes.  Moreover, the bins
  are now defined to be strictly disjoint using boundaries [x0,x1)
  instead of [x0,x1] as before.
o Added plotCoverageMap() for AromaUgpFile.


Version: 2.3.4 [2011-11-19]
o Now byChipType() for UnitAnnotationDataFile and derivatives give an
  error message with more information on which file it failed to 
  locate, e.g. by specifying filename extension it looked for.
o Added default getDefaultExtension() for UnitAnnotationDataFile,
  which guesses the filename extension from the class name, unless
  overridden by a subclass.
o CLEANUP: Now getFullNames() for AromaMicroarrayDataSetTuple no 
  longer produces a warning on "is.na() applied to non-(list or 
  vector) of type 'NULL'".
o BUG FIX: exportTotalCnRatioSet() for AromaUnitTotalCnBinarySet and
  exportFracBDiffSet() for AromaUnitTotalCnBinarySet tried to call
  cat(verbose, x) with length(x) > 1.


Version: 2.3.3 [2011-11-17]
o Added trial version of AromaUcscGenomeTextFile.


Version: 2.3.2 [2011-11-14]
o BUG FIX: process() of ChromosomeExplorer would throw "Error in
  file(file, ifelse(append, "a", "w")) : [...] cannot open file '/
  [...] (new Array(': No such file or directory".  Importing
  the R.rsp namespace in the aroma.core namespace solved this.
  Thanks Qian Liu for reporting on this.


Version: 2.3.1 [2011-11-11]
o Added extractPSCNArray() for AromaUnitTotalCnBinary{File|Set}.


Version: 2.3.0 [2011-10-28]
o Added a namespace to the package, which will be more or less
  a requirement starting with R v2.14.0.


Version: 2.2.2 [2011-09-29]